--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="./">
                 <i class="fas fa-paste"></i> Pastebin
             </a>
         </div>
@@ -31,7 +31,7 @@
                             </div>
                         <% } %>
                         
-                        <form action="/login" method="POST">
+                        <form action="login" method="POST">
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="password" name="password" required>
