--- a/views/view.ejs
+++ b/views/view.ejs
@@ -20,11 +20,11 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="../">
                 <i class="fas fa-paste"></i> Pastebin
             </a>
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/logout">
+                <a class="nav-link" href="logout">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </a>
             </div>
@@ -38,7 +38,7 @@
                     <h1>
                         <i class="fas fa-eye"></i> View Item
                     </h1>
-                    <a href="/" class="btn btn-outline-secondary">
+                    <a href="../" class="btn btn-outline-secondary">
                         <i class="fas fa-arrow-left"></i> Back to List
                     </a>
                 </div>
@@ -58,7 +58,7 @@
                             </div>
                             <div class="col-md-6 text-end">
                                 <div class="btn-group">
-                                    <a href="/download/<%= item.id %>" class="btn btn-success">
+                                    <a href="download/<%= item.id %>" class="btn btn-success">
                                         <i class="fas fa-download"></i> Download
                                     </a>
                                     <button class="btn btn-danger" onclick="confirmDelete(<%= item.id %>)">
@@ -72,7 +72,7 @@
                         
                         <% if (item.mimetype.startsWith('image/')) { %>
                             <div class="text-center">
-                                <img src="/uploads/<%= item.filename %>" class="img-fluid" alt="<%= item.originalname %>">
+                                <img src="../uploads/<%= item.filename %>" class="img-fluid" alt="<%= item.originalname %>">
                             </div>
                         <% } else if (item.mimetype.startsWith('text/') && item.content) { %>
                             <div class="text-preview">
@@ -96,11 +96,11 @@
         // Delete confirmation
         function confirmDelete(id) {
             if (confirm('Are you sure you want to delete this item?')) {
-                fetch(`/delete/${id}`, { method: 'DELETE' })
+                fetch(`delete/${id}`, { method: 'DELETE' })
                     .then(response => response.json())
                     .then(data => {
                         if (data.success) {
-                            window.location.href = '/';
+                            window.location.href = '../';
                         } else {
                             alert('Error deleting item');
                         }
